--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "cluster": "^0.7.7",
     "express": "^4.18.1"
   }
 }
