--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.25.0",
+    "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
