--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "artillery": "^2.0.0-23",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
+    "loadtest": "^5.2.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
