--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "author": "Ramzi <ramzi.hannachi1991@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register ./src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register ./src/server.ts",
+    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./build",
     "ts:check": "tsc --noemit",
-    "lint": "yarn eslint ."
+    "lint": "yarn eslint .",
+    "pm2:start": "yarn build && NODE_ENV=production pm2 start pm2.config.js",
+    "pm2:monit": "pm2 monit",
+    "pm2:delete": "pm2 delete all"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "engines": {
+    "npm": ">=8.5.5",
+    "node": ">=16.15.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -15,14 +26,14 @@
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "artillery": "^2.0.0-23",
+    "dotenv": "^16.0.3",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "loadtest": "^5.2.0",
+    "pm2": "^5.2.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "express": "^4.18.1"
   }
 }
