--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,22 @@
 {
   "include": ["src"],
   "compilerOptions": {
-    "outDir": "./dist",
+    "strictPropertyInitialization": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "moduleResolution": "node",
+    "inlineSources": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "outDir": "./build",
+    "target": "es5",
     "module": "commonjs",
-    "target": "ES2019",
+    "lib": [
+      "es2015", "dom"
+    ],
     "esModuleInterop": true,
     "allowJs": true,
     "strict": true,
