--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pm2:delete": "pm2 delete all"
   },
   "dependencies": {
+    "amqplib": "^0.10.3",
     "express": "^4.18.1"
   },
   "engines": {
@@ -21,6 +22,7 @@
     "node": ">=16.15.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
