--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./build",
     "ts:check": "tsc --noemit",
     "lint": "yarn eslint .",
-    "pm2:start": "yarn build && NODE_ENV=production pm2 start pm2.config.js --no-daemon",
+    "pm2:start": "yarn build && NODE_ENV=production pm2 start pm2.config.js --watch --no-daemon",
     "pm2:monit": "pm2 monit",
     "pm2:delete": "pm2 delete all"
   },
