--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "redis": "^4.5.0"
   },
   "engines": {
     "npm": ">=8.5.5",
@@ -24,6 +25,7 @@
     "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "dotenv": "^16.0.3",
